# update-daemon

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.lock.license  flake.nix  module.nix  shell.nix
.buildkite/: pipeline.yml
.github/workflows/: check.yml
.reuse/: dep5
src/: flake_lock.rs  git.rs  main.rs  types.rs
src/flake_lock/: mod.rs
src/flake_lock/tests/: mod.rs
src/flake_lock/tests/simple_new/: lock.expected  simple_old.expected  simple_old.expected.license
src/flake_lock/tests/simple_old/: lock.expected  simple_new.expected  simple_old.expected
src/request/: github.rs  gitlab.rs  mod.rs
