# SPDX-FileCopyrightText: 2021 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "update-daemon"
version = "0.1.0"
authors = ["Serokell <hi@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.18"
octocrab = "0.8"
log = "0.4.13"
pretty_env_logger = "0.4.0"
thiserror = "1.0"
tokio = { version = "1.5.0", features = [ "full" ] }
xdg = "2.2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
futures = "0.3"
chrono = "0.4"
indexmap = { version = "1.6", features = [ "serde", "serde-1" ] }