# SPDX-FileCopyrightText: 2021 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "update-daemon"
version = "0.1.0"
authors = ["Serokell <hi@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18"
octocrab = "0.18.1"
gitlab = "0.1506.0"
log = "0.4.20"
pretty_env_logger = "0.4.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = [ "full" ] }
xdg = "2.5.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = { version = "3.2.25", features = [ "derive" ] }
futures = "0.3"
chrono = "0.4"
indexmap = { version = "1.9", features = [ "serde", "serde-1" ] }
merge = "0.1"
gpgme = "0.10.0"
